nvml-wrapper-sys/nvml.h

#define nvmlDeviceGetNvLinkRemotePciInfo nvmlDeviceGetNvLinkRemotePciInfo_v2
#define nvmlDeviceRemoveGpu nvmlDeviceRemoveGpu_v2
#define nvmlEventSetWait nvmlEventSetWait_v2
    typedef struct nvmlDevice_st *nvmlDevice_t;
    typedef struct nvmlPciInfo_st
    {
        char busIdLegacy[NVML_DEVICE_PCI_BUS_ID_BUFFER_V2_SIZE]; 
        unsigned int domain;                                     
        unsigned int bus;                                        
        unsigned int device;                                     
        unsigned int pciDeviceId;                                
        unsigned int pciSubSystemId; 
        char busId[NVML_DEVICE_PCI_BUS_ID_BUFFER_SIZE]; 
    } nvmlPciInfo_t;
    typedef struct nvmlBAR1Memory_st
    {
        unsigned long long bar1Total; 
        unsigned long long bar1Free;  
        unsigned long long bar1Used;  
    } nvmlBAR1Memory_t;
    typedef enum nvmlNvLinkUtilizationCountUnits_enum
    {
        NVML_NVLINK_COUNTER_UNIT_CYCLES = 0,   
        NVML_NVLINK_COUNTER_UNIT_PACKETS = 1,  
        NVML_NVLINK_COUNTER_UNIT_BYTES = 2,    
        NVML_NVLINK_COUNTER_UNIT_RESERVED = 3, 
        NVML_NVLINK_COUNTER_UNIT_COUNT
    } nvmlNvLinkUtilizationCountUnits_t;
    typedef enum nvmlNvLinkUtilizationCountPktTypes_enum
    {
        NVML_NVLINK_COUNTER_PKTFILTER_NOP = 0x1,         
        NVML_NVLINK_COUNTER_PKTFILTER_READ = 0x2,        
        NVML_NVLINK_COUNTER_PKTFILTER_WRITE = 0x4,       
        NVML_NVLINK_COUNTER_PKTFILTER_RATOM = 0x8,       
        NVML_NVLINK_COUNTER_PKTFILTER_NRATOM = 0x10,     
        NVML_NVLINK_COUNTER_PKTFILTER_FLUSH = 0x20,      
        NVML_NVLINK_COUNTER_PKTFILTER_RESPDATA = 0x40,   
        NVML_NVLINK_COUNTER_PKTFILTER_RESPNODATA = 0x80, 
        NVML_NVLINK_COUNTER_PKTFILTER_ALL = 0xFF         
    } nvmlNvLinkUtilizationCountPktTypes_t;
    typedef struct nvmlNvLinkUtilizationControl_st
    {
        nvmlNvLinkUtilizationCountUnits_t units;
        nvmlNvLinkUtilizationCountPktTypes_t pktfilter;
    } nvmlNvLinkUtilizationControl_t;
    typedef enum nvmlNvLinkCapability_enum
    {
        NVML_NVLINK_CAP_P2P_SUPPORTED = 0,  
        NVML_NVLINK_CAP_SYSMEM_ACCESS = 1,  
        NVML_NVLINK_CAP_P2P_ATOMICS = 2,    
        NVML_NVLINK_CAP_SYSMEM_ATOMICS = 3, 
        NVML_NVLINK_CAP_SLI_BRIDGE = 4,     
        NVML_NVLINK_CAP_VALID = 5,          
        NVML_NVLINK_CAP_COUNT
    } nvmlNvLinkCapability_t;
    typedef enum nvmlNvLinkErrorCounter_enum
    {
        NVML_NVLINK_ERROR_DL_REPLAY = 0,   
        NVML_NVLINK_ERROR_DL_RECOVERY = 1, 
        NVML_NVLINK_ERROR_DL_CRC_FLIT = 2, 
        NVML_NVLINK_ERROR_DL_CRC_DATA = 3, 
        NVML_NVLINK_ERROR_COUNT
    } nvmlNvLinkErrorCounter_t;
    typedef enum nvmlSamplingType_enum
    {
        NVML_TOTAL_POWER_SAMPLES = 0,        
        NVML_GPU_UTILIZATION_SAMPLES = 1,    
        NVML_MEMORY_UTILIZATION_SAMPLES = 2, 
        NVML_ENC_UTILIZATION_SAMPLES = 3,    
        NVML_DEC_UTILIZATION_SAMPLES = 4,    
        NVML_PROCESSOR_CLK_SAMPLES = 5,      
        NVML_MEMORY_CLK_SAMPLES = 6,         
        NVML_SAMPLINGTYPE_COUNT
    } nvmlSamplingType_t;
    typedef enum nvmlValueType_enum
    {
        NVML_VALUE_TYPE_DOUBLE = 0,
        NVML_VALUE_TYPE_UNSIGNED_INT = 1,
        NVML_VALUE_TYPE_UNSIGNED_LONG = 2,
        NVML_VALUE_TYPE_UNSIGNED_LONG_LONG = 3,
        NVML_VALUE_TYPE_SIGNED_LONG_LONG = 4,
        NVML_VALUE_TYPE_COUNT
    } nvmlValueType_t;
    typedef union nvmlValue_st
    {
        double dVal;               
        unsigned int uiVal;        
        unsigned long ulVal;       
        unsigned long long ullVal; 
        signed long long sllVal;   
    } nvmlValue_t;
    typedef struct nvmlSample_st
    {
        unsigned long long timeStamp; 
        nvmlValue_t sampleValue;      
    } nvmlSample_t;
    typedef enum nvmlPerfPolicyType_enum
    {
        NVML_PERF_POLICY_POWER = 0,           
        NVML_PERF_POLICY_THERMAL = 1,         
        NVML_PERF_POLICY_SYNC_BOOST = 2,      
        NVML_PERF_POLICY_BOARD_LIMIT = 3,     
        NVML_PERF_POLICY_LOW_UTILIZATION = 4, 
        NVML_PERF_POLICY_RELIABILITY = 5,     
        NVML_PERF_POLICY_TOTAL_APP_CLOCKS = 10,  
        NVML_PERF_POLICY_TOTAL_BASE_CLOCKS = 11, 
        NVML_PERF_POLICY_COUNT
    } nvmlPerfPolicyType_t;
    typedef struct nvmlViolationTime_st
    {
        unsigned long long referenceTime; 
        unsigned long long violationTime; 
    } nvmlViolationTime_t;
    typedef enum nvmlEnableState_enum
    {
        NVML_FEATURE_DISABLED = 0, 
        NVML_FEATURE_ENABLED = 1   
    } nvmlEnableState_t;
    typedef enum nvmlComputeMode_enum
    {
        NVML_COMPUTEMODE_DEFAULT = 0,           
        NVML_COMPUTEMODE_EXCLUSIVE_THREAD = 1,  
        NVML_COMPUTEMODE_PROHIBITED = 2,        
        NVML_COMPUTEMODE_EXCLUSIVE_PROCESS = 3, 
        NVML_COMPUTEMODE_COUNT
    } nvmlComputeMode_t;
    typedef enum nvmlEccCounterType_enum
    {
        NVML_VOLATILE_ECC = 0,  
        NVML_AGGREGATE_ECC = 1, 
        NVML_ECC_COUNTER_TYPE_COUNT 
    } nvmlEccCounterType_t;
    typedef enum nvmlDriverModel_enum
    {
        NVML_DRIVER_WDDM = 0, 
        NVML_DRIVER_WDM = 1   
    } nvmlDriverModel_t;
    typedef enum nvmlGom_enum
    {
        NVML_GOM_ALL_ON = 0, 
        NVML_GOM_COMPUTE = 1, 
        NVML_GOM_LOW_DP = 2 
    } nvmlGpuOperationMode_t;
    typedef enum nvmlReturn_enum
    {
        NVML_SUCCESS = 0,                        
        NVML_ERROR_UNINITIALIZED = 1,            
        NVML_ERROR_INVALID_ARGUMENT = 2,         
        NVML_ERROR_NOT_SUPPORTED = 3,            
        NVML_ERROR_NO_PERMISSION = 4,            
        NVML_ERROR_ALREADY_INITIALIZED = 5,      
        NVML_ERROR_NOT_FOUND = 6,                
        NVML_ERROR_INSUFFICIENT_SIZE = 7,        
        NVML_ERROR_INSUFFICIENT_POWER = 8,       
        NVML_ERROR_DRIVER_NOT_LOADED = 9,        
        NVML_ERROR_TIMEOUT = 10,                 
        NVML_ERROR_IRQ_ISSUE = 11,               
        NVML_ERROR_LIBRARY_NOT_FOUND = 12,       
        NVML_ERROR_FUNCTION_NOT_FOUND = 13,      
        NVML_ERROR_CORRUPTED_INFOROM = 14,       
        NVML_ERROR_GPU_IS_LOST = 15,             
        NVML_ERROR_RESET_REQUIRED = 16,          
        NVML_ERROR_OPERATING_SYSTEM = 17,        
        NVML_ERROR_LIB_RM_VERSION_MISMATCH = 18, 
        NVML_ERROR_IN_USE = 19,                  
        NVML_ERROR_MEMORY = 20,                  
        NVML_ERROR_NO_DATA = 21,                 
        NVML_ERROR_VGPU_ECC_NOT_SUPPORTED = 22,  
        NVML_ERROR_INSUFFICIENT_RESOURCES = 23,  
        NVML_ERROR_UNKNOWN = 999                 
    } nvmlReturn_t;
    typedef enum nvmlPageRetirementCause_enum
    {
        NVML_PAGE_RETIREMENT_CAUSE_MULTIPLE_SINGLE_BIT_ECC_ERRORS = 0, 
        NVML_PAGE_RETIREMENT_CAUSE_DOUBLE_BIT_ECC_ERROR = 1,           
        NVML_PAGE_RETIREMENT_CAUSE_COUNT
    } nvmlPageRetirementCause_t;
    typedef enum nvmlRestrictedAPI_enum
    {
        NVML_RESTRICTED_API_SET_APPLICATION_CLOCKS = 0,  
        NVML_RESTRICTED_API_SET_AUTO_BOOSTED_CLOCKS = 1, 
        NVML_RESTRICTED_API_COUNT
    } nvmlRestrictedAPI_t;
    typedef struct nvmlUnit_st *nvmlUnit_t;
    typedef enum nvmlLedColor_enum
    {
        NVML_LED_COLOR_GREEN = 0, 
        NVML_LED_COLOR_AMBER = 1  
    } nvmlLedColor_t;
    typedef struct nvmlEventSet_st *nvmlEventSet_t;
    typedef struct nvmlEventData_st
    {
        nvmlDevice_t device;            
        unsigned long long eventType;   
        unsigned long long eventData;   
        unsigned int gpuInstanceId;     
        unsigned int computeInstanceId; 
    } nvmlEventData_t;
    typedef struct nvmlAccountingStats_st
    {
        unsigned int gpuUtilization; 
        unsigned int memoryUtilization; 
        unsigned long long maxMemoryUsage; 
        unsigned long long time; 
        unsigned long long startTime; 
        unsigned int isRunning; 
        unsigned int reserved[5]; 
    } nvmlAccountingStats_t;
    nvmlReturn_t DECLDIR nvmlDeviceGetSamples(nvmlDevice_t device, nvmlSamplingType_t type, unsigned long long lastSeenTimeStamp,
                                              nvmlValueType_t *sampleValType, unsigned int *sampleCount, nvmlSample_t *samples);
    nvmlReturn_t DECLDIR nvmlDeviceGetBAR1MemoryInfo(nvmlDevice_t device, nvmlBAR1Memory_t *bar1Memory);
    nvmlReturn_t DECLDIR nvmlDeviceGetViolationStatus(nvmlDevice_t device, nvmlPerfPolicyType_t perfPolicyType, nvmlViolationTime_t *violTime);
    nvmlReturn_t DECLDIR nvmlDeviceGetAccountingMode(nvmlDevice_t device, nvmlEnableState_t *mode);
    nvmlReturn_t DECLDIR nvmlDeviceGetAccountingStats(nvmlDevice_t device, unsigned int pid, nvmlAccountingStats_t *stats);
    nvmlReturn_t DECLDIR nvmlDeviceGetAccountingPids(nvmlDevice_t device, unsigned int *count, unsigned int *pids);
    nvmlReturn_t DECLDIR nvmlDeviceGetAccountingBufferSize(nvmlDevice_t device, unsigned int *bufferSize);
    nvmlReturn_t DECLDIR nvmlDeviceGetRetiredPages(nvmlDevice_t device, nvmlPageRetirementCause_t cause,
                                                   unsigned int *pageCount, unsigned long long *addresses);
    nvmlReturn_t DECLDIR nvmlDeviceGetRetiredPagesPendingStatus(nvmlDevice_t device, nvmlEnableState_t *isPending);
    nvmlReturn_t DECLDIR nvmlUnitSetLedState(nvmlUnit_t unit, nvmlLedColor_t color);
    nvmlReturn_t DECLDIR nvmlDeviceSetPersistenceMode(nvmlDevice_t device, nvmlEnableState_t mode);
    nvmlReturn_t DECLDIR nvmlDeviceSetComputeMode(nvmlDevice_t device, nvmlComputeMode_t mode);
    nvmlReturn_t DECLDIR nvmlDeviceSetEccMode(nvmlDevice_t device, nvmlEnableState_t ecc);
    nvmlReturn_t DECLDIR nvmlDeviceClearEccErrorCounts(nvmlDevice_t device, nvmlEccCounterType_t counterType);
    nvmlReturn_t DECLDIR nvmlDeviceSetDriverModel(nvmlDevice_t device, nvmlDriverModel_t driverModel, unsigned int flags);
    nvmlReturn_t DECLDIR nvmlDeviceSetApplicationsClocks(nvmlDevice_t device, unsigned int memClockMHz, unsigned int graphicsClockMHz);
    nvmlReturn_t DECLDIR nvmlDeviceSetPowerManagementLimit(nvmlDevice_t device, unsigned int limit);
    nvmlReturn_t DECLDIR nvmlDeviceSetGpuOperationMode(nvmlDevice_t device, nvmlGpuOperationMode_t mode);
    nvmlReturn_t DECLDIR nvmlDeviceSetAPIRestriction(nvmlDevice_t device, nvmlRestrictedAPI_t apiType, nvmlEnableState_t isRestricted);
    nvmlReturn_t DECLDIR nvmlDeviceSetAccountingMode(nvmlDevice_t device, nvmlEnableState_t mode);
    nvmlReturn_t DECLDIR nvmlDeviceClearAccountingPids(nvmlDevice_t device);
    nvmlReturn_t DECLDIR nvmlDeviceGetNvLinkState(nvmlDevice_t device, unsigned int link, nvmlEnableState_t *isActive);
    nvmlReturn_t DECLDIR nvmlDeviceGetNvLinkVersion(nvmlDevice_t device, unsigned int link, unsigned int *version);
    nvmlReturn_t DECLDIR nvmlDeviceGetNvLinkCapability(nvmlDevice_t device, unsigned int link,
                                                       nvmlNvLinkCapability_t capability, unsigned int *capResult);
    nvmlReturn_t DECLDIR nvmlDeviceGetNvLinkErrorCounter(nvmlDevice_t device, unsigned int link,
                                                         nvmlNvLinkErrorCounter_t counter, unsigned long long *counterValue);
    nvmlReturn_t DECLDIR nvmlDeviceResetNvLinkErrorCounters(nvmlDevice_t device, unsigned int link);
    nvmlReturn_t DECLDIR nvmlDeviceSetNvLinkUtilizationControl(nvmlDevice_t device, unsigned int link, unsigned int counter,
                                                               nvmlNvLinkUtilizationControl_t *control, unsigned int reset);
    nvmlReturn_t DECLDIR nvmlDeviceGetNvLinkUtilizationControl(nvmlDevice_t device, unsigned int link, unsigned int counter,
                                                               nvmlNvLinkUtilizationControl_t *control);
    nvmlReturn_t DECLDIR nvmlDeviceGetNvLinkUtilizationCounter(nvmlDevice_t device, unsigned int link, unsigned int counter,
                                                               unsigned long long *rxcounter, unsigned long long *txcounter);
    nvmlReturn_t DECLDIR nvmlDeviceFreezeNvLinkUtilizationCounter(nvmlDevice_t device, unsigned int link,
                                                                  unsigned int counter, nvmlEnableState_t freeze);
    nvmlReturn_t DECLDIR nvmlDeviceResetNvLinkUtilizationCounter(nvmlDevice_t device, unsigned int link, unsigned int counter);
    nvmlReturn_t DECLDIR nvmlEventSetCreate(nvmlEventSet_t *set);
    nvmlReturn_t DECLDIR nvmlDeviceRegisterEvents(nvmlDevice_t device, unsigned long long eventTypes, nvmlEventSet_t set);
    nvmlReturn_t DECLDIR nvmlDeviceGetSupportedEventTypes(nvmlDevice_t device, unsigned long long *eventTypes);
    nvmlReturn_t DECLDIR nvmlEventSetFree(nvmlEventSet_t set);
    nvmlReturn_t DECLDIR nvmlDeviceModifyDrainState(nvmlPciInfo_t *pciInfo, nvmlEnableState_t newState);
    nvmlReturn_t DECLDIR nvmlDeviceQueryDrainState(nvmlPciInfo_t *pciInfo, nvmlEnableState_t *currentState);
    nvmlReturn_t DECLDIR nvmlDeviceDiscoverGpus(nvmlPciInfo_t *pciInfo);
    nvmlReturn_t DECLDIR nvmlDeviceGetNvLinkRemotePciInfo(nvmlDevice_t device, unsigned int link, nvmlPciInfo_t *pci);
    nvmlReturn_t DECLDIR nvmlDeviceRemoveGpu(nvmlPciInfo_t *pciInfo);
    nvmlReturn_t DECLDIR nvmlEventSetWait(nvmlEventSet_t set, nvmlEventData_t *data, unsigned int timeoutms);