nvml-wrapper-sys/src/bindings/linux.rs

#[cfg(feature = "nightly")]
extern "C" {
    pub fn nvmlDeviceGetSamples(device: nvmlDevice_t,
                                type_: nvmlSamplingType_t,
                                lastSeenTimeStamp:
                                    ::std::os::raw::c_ulonglong,
                                sampleValType: *mut nvmlValueType_t,
                                sampleCount: *mut ::std::os::raw::c_uint,
                                samples: *mut nvmlSample_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetBAR1MemoryInfo(device: nvmlDevice_t,
                                       bar1Memory: *mut nvmlBAR1Memory_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetViolationStatus(device: nvmlDevice_t,
                                        perfPolicyType: nvmlPerfPolicyType_t,
                                        violTime: *mut nvmlViolationTime_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetAccountingMode(device: nvmlDevice_t,
                                       mode: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetAccountingStats(device: nvmlDevice_t,
                                        pid: ::std::os::raw::c_uint,
                                        stats: *mut nvmlAccountingStats_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetAccountingPids(device: nvmlDevice_t,
                                       count: *mut ::std::os::raw::c_uint,
                                       pids: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetAccountingBufferSize(device: nvmlDevice_t,
                                             bufferSize:
                                                 *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetRetiredPages(device: nvmlDevice_t,
                                     cause: nvmlPageRetirementCause_t,
                                     pageCount: *mut ::std::os::raw::c_uint,
                                     addresses:
                                         *mut ::std::os::raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetRetiredPagesPendingStatus(device: nvmlDevice_t,
                                                  isPending:
                                                      *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlUnitSetLedState(unit: nvmlUnit_t, color: nvmlLedColor_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetPersistenceMode(device: nvmlDevice_t,
                                        mode: nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetComputeMode(device: nvmlDevice_t,
                                    mode: nvmlComputeMode_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetEccMode(device: nvmlDevice_t, ecc: nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceClearEccErrorCounts(device: nvmlDevice_t,
                                         counterType: nvmlEccCounterType_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetDriverModel(device: nvmlDevice_t,
                                    driverModel: nvmlDriverModel_t,
                                    flags: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetApplicationsClocks(device: nvmlDevice_t,
                                           memClockMHz:
                                               ::std::os::raw::c_uint,
                                           graphicsClockMHz:
                                               ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetPowerManagementLimit(device: nvmlDevice_t,
                                             limit: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetGpuOperationMode(device: nvmlDevice_t,
                                         mode: nvmlGpuOperationMode_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetAPIRestriction(device: nvmlDevice_t,
                                       apiType: nvmlRestrictedAPI_t,
                                       isRestricted: nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetAccountingMode(device: nvmlDevice_t,
                                       mode: nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceClearAccountingPids(device: nvmlDevice_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetNvLinkState(device: nvmlDevice_t,
                                    link: ::std::os::raw::c_uint,
                                    isActive: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetNvLinkVersion(device: nvmlDevice_t,
                                      link: ::std::os::raw::c_uint,
                                      version: *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetNvLinkCapability(device: nvmlDevice_t,
                                         link: ::std::os::raw::c_uint,
                                         capability: nvmlNvLinkCapability_t,
                                         capResult:
                                             *mut ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetNvLinkRemotePciInfo(device: nvmlDevice_t,
                                            link: ::std::os::raw::c_uint,
                                            pci: *mut nvmlPciInfo_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetNvLinkErrorCounter(device: nvmlDevice_t,
                                           link: ::std::os::raw::c_uint,
                                           counter: nvmlNvLinkErrorCounter_t,
                                           counterValue:
                                               *mut ::std::os::raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceResetNvLinkErrorCounters(device: nvmlDevice_t,
                                              link: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceSetNvLinkUtilizationControl(device: nvmlDevice_t,
                                                 link: ::std::os::raw::c_uint,
                                                 counter:
                                                     ::std::os::raw::c_uint,
                                                 control:
                                                     *mut nvmlNvLinkUtilizationControl_t,
                                                 reset:
                                                     ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetNvLinkUtilizationControl(device: nvmlDevice_t,
                                                 link: ::std::os::raw::c_uint,
                                                 counter:
                                                     ::std::os::raw::c_uint,
                                                 control:
                                                     *mut nvmlNvLinkUtilizationControl_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetNvLinkUtilizationCounter(device: nvmlDevice_t,
                                                 link: ::std::os::raw::c_uint,
                                                 counter:
                                                     ::std::os::raw::c_uint,
                                                 rxcounter:
                                                     *mut ::std::os::raw::c_ulonglong,
                                                 txcounter:
                                                     *mut ::std::os::raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceFreezeNvLinkUtilizationCounter(device: nvmlDevice_t,
                                                    link:
                                                        ::std::os::raw::c_uint,
                                                    counter:
                                                        ::std::os::raw::c_uint,
                                                    freeze: nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceResetNvLinkUtilizationCounter(device: nvmlDevice_t,
                                                   link:
                                                       ::std::os::raw::c_uint,
                                                   counter:
                                                       ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlEventSetCreate(set: *mut nvmlEventSet_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceRegisterEvents(device: nvmlDevice_t,
                                    eventTypes: ::std::os::raw::c_ulonglong,
                                    set: nvmlEventSet_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceGetSupportedEventTypes(device: nvmlDevice_t,
                                            eventTypes:
                                                *mut ::std::os::raw::c_ulonglong)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlEventSetWait(set: nvmlEventSet_t, data: *mut nvmlEventData_t,
                            timeoutms: ::std::os::raw::c_uint)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlEventSetFree(set: nvmlEventSet_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceModifyDrainState(pciInfo: *mut nvmlPciInfo_t,
                                      newState: nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceQueryDrainState(pciInfo: *mut nvmlPciInfo_t,
                                     currentState: *mut nvmlEnableState_t)
     -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceRemoveGpu(pciInfo: *mut nvmlPciInfo_t) -> nvmlReturn_t;
}
extern "C" {
    pub fn nvmlDeviceDiscoverGpus(pciInfo: *mut nvmlPciInfo_t)
     -> nvmlReturn_t;
}
